C/include/codata_constants_2010.h

ADD_IMPORT extern const struct codata_constant_type ELECTRIC_CONSTANT_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_CHARGE_TO_MASS_QUOTIENT_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_DEUTERON_MAG_MOM_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_DEUTERON_MASS_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_G_FACTOR_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_GYROMAG_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_GYROMAG_RATIO_OVER_2_PI_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_HELION_MASS_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_MAG_MOM_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_MAG_MOM_ANOMALY_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_MAG_MOM_TO_BOHR_MAGNETON_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_MAG_MOM_TO_NUCLEAR_MAGNETON_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_MASS_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_MASS_ENERGY_EQUIVALENT_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV_2010;