src/codata_constants_2010_capi.f90


type(capi_constant_type), protected, public, bind(C, name="ELECTRIC_CONSTANT_2010") ::&
capi_76_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "i", "c", " ", "c", &
"o", "n", "s", "t", "a", "n", "t", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRIC_CONSTANT_2010%value, &
ELECTRIC_CONSTANT_2010%uncertainty, &
[ &
"F", " ", "m", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_CHARGE_TO_MASS_QUOTIENT_2010") ::&
capi_77_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "c", &
"h", "a", "r", "g", "e", " ", "t", "o", " ", "m", &
"a", "s", "s", " ", "q", "u", "o", "t", "i", "e", &
"n", "t", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_CHARGE_TO_MASS_QUOTIENT_2010%value, &
ELECTRON_CHARGE_TO_MASS_QUOTIENT_2010%uncertainty, &
[ &
"C", " ", "k", "g", "^", "-", "1", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_DEUTERON_MAG_MOM_RATIO_2010") ::&
capi_78_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", "-", "d", &
"e", "u", "t", "e", "r", "o", "n", " ", "m", "a", &
"g", ".", " ", "m", "o", "m", ".", " ", "r", "a", &
"t", "i", "o", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_DEUTERON_MAG_MOM_RATIO_2010%value, &
ELECTRON_DEUTERON_MAG_MOM_RATIO_2010%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_DEUTERON_MASS_RATIO_2010") ::&
capi_79_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", "-", "d", &
"e", "u", "t", "e", "r", "o", "n", " ", "m", "a", &
"s", "s", " ", "r", "a", "t", "i", "o", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_DEUTERON_MASS_RATIO_2010%value, &
ELECTRON_DEUTERON_MASS_RATIO_2010%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_G_FACTOR_2010") ::&
capi_80_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "g", &
" ", "f", "a", "c", "t", "o", "r", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_G_FACTOR_2010%value, &
ELECTRON_G_FACTOR_2010%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_GYROMAG_RATIO_2010") ::&
capi_81_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "g", &
"y", "r", "o", "m", "a", "g", ".", " ", "r", "a", &
"t", "i", "o", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_GYROMAG_RATIO_2010%value, &
ELECTRON_GYROMAG_RATIO_2010%uncertainty, &
[ &
"s", "^", "-", "1", " ", "T", "^", "-", "1", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_GYROMAG_RATIO_OVER_2_PI_2010") ::&
capi_82_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "g", &
"y", "r", "o", "m", "a", "g", ".", " ", "r", "a", &
"t", "i", "o", " ", "o", "v", "e", "r", " ", "2", &
" ", "p", "i", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_GYROMAG_RATIO_OVER_2_PI_2010%value, &
ELECTRON_GYROMAG_RATIO_OVER_2_PI_2010%uncertainty, &
[ &
"M", "H", "z", " ", "T", "^", "-", "1", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_HELION_MASS_RATIO_2010") ::&
capi_83_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", "-", "h", &
"e", "l", "i", "o", "n", " ", "m", "a", "s", "s", &
" ", "r", "a", "t", "i", "o", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_HELION_MASS_RATIO_2010%value, &
ELECTRON_HELION_MASS_RATIO_2010%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_MAG_MOM_2010") ::&
capi_84_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "m", &
"a", "g", ".", " ", "m", "o", "m", ".", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_MAG_MOM_2010%value, &
ELECTRON_MAG_MOM_2010%uncertainty, &
[ &
"J", " ", "T", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_MAG_MOM_ANOMALY_2010") ::&
capi_85_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "m", &
"a", "g", ".", " ", "m", "o", "m", ".", " ", "a", &
"n", "o", "m", "a", "l", "y", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_MAG_MOM_ANOMALY_2010%value, &
ELECTRON_MAG_MOM_ANOMALY_2010%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_MAG_MOM_TO_BOHR_MAGNETON_RATIO_2010") ::&
capi_86_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "m", &
"a", "g", ".", " ", "m", "o", "m", ".", " ", "t", &
"o", " ", "B", "o", "h", "r", " ", "m", "a", "g", &
"n", "e", "t", "o", "n", " ", "r", "a", "t", "i", &
"o", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_MAG_MOM_TO_BOHR_MAGNETON_RATIO_2010%value, &
ELECTRON_MAG_MOM_TO_BOHR_MAGNETON_RATIO_2010%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_MAG_MOM_TO_NUCLEAR_MAGNETON_RATIO_2010") ::&
capi_87_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "m", &
"a", "g", ".", " ", "m", "o", "m", ".", " ", "t", &
"o", " ", "n", "u", "c", "l", "e", "a", "r", " ", &
"m", "a", "g", "n", "e", "t", "o", "n", " ", "r", &
"a", "t", "i", "o", c_null_char, " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_MAG_MOM_TO_NUCLEAR_MAGNETON_RATIO_2010%value, &
ELECTRON_MAG_MOM_TO_NUCLEAR_MAGNETON_RATIO_2010%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_MASS_2010") ::&
capi_88_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "m", &
"a", "s", "s", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_MASS_2010%value, &
ELECTRON_MASS_2010%uncertainty, &
[ &
"k", "g", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_MASS_ENERGY_EQUIVALENT_2010") ::&
capi_89_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "m", &
"a", "s", "s", " ", "e", "n", "e", "r", "g", "y", &
" ", "e", "q", "u", "i", "v", "a", "l", "e", "n", &
"t", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_MASS_ENERGY_EQUIVALENT_2010%value, &
ELECTRON_MASS_ENERGY_EQUIVALENT_2010%uncertainty, &
[ &
"J", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV_2010") ::&
capi_90_2010 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "m", &
"a", "s", "s", " ", "e", "n", "e", "r", "g", "y", &
" ", "e", "q", "u", "i", "v", "a", "l", "e", "n", &
"t", " ", "i", "n", " ", "M", "e", "V", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV_2010%value, &
ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV_2010%uncertainty, &
[ &
"M", "e", "V", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])
